--- a/src/content/docs/fr/2.0/cosmic-navigation/reading-star-charts-and-maps.mdx
+++ b/src/content/docs/fr/2.0/cosmic-navigation/reading-star-charts-and-maps.mdx
@@ -2,7 +2,7 @@
 title: Lire les cartes stellaires
 sidebar:
   label: Lire les cartes stellaires
-slug: 2.0/frcosmic-navigation/reading-star-charts-and-maps
+slug: fr/2.0/cosmic-navigation/reading-star-charts-and-maps
 ---
 
 Apprenez à interpréter les cartes stellaires pour naviguer dans le cosmos en toute confiance.
