--- a/src/content/docs/fr/2.0/getting-started/basic-navigation-techniques.mdx
+++ b/src/content/docs/fr/2.0/getting-started/basic-navigation-techniques.mdx
@@ -2,7 +2,7 @@
 title: Techniques de navigation de base
 sidebar:
   label: Techniques de navigation de base
-slug: 2.0/frgetting-started/basic-navigation-techniques
+slug: fr/2.0/getting-started/basic-navigation-techniques
 ---
 
 Apprenez les techniques essentielles pour naviguer dans l'espace, y compris l'utilisation des cartes stellaires et des instruments de base.
