--- a/src/content/docs/fr/2.0/getting-started/rocket-launch.mdx
+++ b/src/content/docs/fr/2.0/getting-started/rocket-launch.mdx
@@ -2,7 +2,7 @@
 title: exploration spatiale
 sidebar:
   label: exploration spatiale
-slug: 2.0/frgetting-started/rocket-launch
+slug: fr/2.0/getting-started/rocket-launch
 ---
 
 Una aperçu  de son histoire et de ce que vous devez savoir avant votre première mission.
