--- a/src/content/docs/fr/index.mdx
+++ b/src/content/docs/fr/index.mdx
@@ -5,6 +5,9 @@ template: splash
 hero:
   title: Documentation Bizarre Binary
   tagline: Bienvenue sur Bizarre Binary, votre compagnon de confiance pour explorer l'immensité de l'espace. Ce site de documentation est dédié à vous aider à maîtriser l'art de l'exploration spatiale.
+  image:
+    alt: Bizarre Binary Logo
+    file: /Fav-icon.ico
   actions:
     - text: Commencer
       link: /fr/getting-started/introduction-to-space-exploration/
