--- a/src/content/docs/fr/1.0/cosmic-navigation/dealing-with-gravity-and-orbit.mdx
+++ b/src/content/docs/fr/1.0/cosmic-navigation/dealing-with-gravity-and-orbit.mdx
@@ -2,7 +2,7 @@
 title: Gérer la gravité et l'orbite
 sidebar:
   label: Gérer la gravité et l'orbite
-slug: 1.0/frcosmic-navigation/dealing-with-gravity-and-orbit
+slug: fr/1.0/cosmic-navigation/dealing-with-gravity-and-orbit
 ---
 
 Comprenez les effets de la gravité et comment gérer les orbites lors des voyages spatiaux.
