--- a/src/content/docs/fr/1.0/getting-started/introduction-to-space-exploration.mdx
+++ b/src/content/docs/fr/1.0/getting-started/introduction-to-space-exploration.mdx
@@ -2,7 +2,7 @@
 title: Introduction à l'exploration spatiale
 sidebar:
   label: Introduction à l'exploration spatiale
-slug: 1.0/frgetting-started/introduction-to-space-exploration
+slug: fr/1.0/getting-started/introduction-to-space-exploration
 ---
 
 Un aperçu de l'exploration spatiale, de son histoire et de ce que vous devez savoir avant votre première mission.
