--- a/src/content/docs/fr/1.0/getting-started/setting-up-your-spacecraft.mdx
+++ b/src/content/docs/fr/1.0/getting-started/setting-up-your-spacecraft.mdx
@@ -2,7 +2,7 @@
 title: Préparation de votre vaisseau spatial
 sidebar:
   label: Préparation de votre vaisseau spatial
-slug: 1.0/frgetting-started/setting-up-your-spacecraft
+slug: fr/1.0/getting-started/setting-up-your-spacecraft
 ---
 
 Instructions étape par étape pour préparer votre vaisseau spatial au lancement et au voyage.
