--- a/src/content/docs/fr/2.0/cosmic-navigation/plotting-course-through-space.mdx
+++ b/src/content/docs/fr/2.0/cosmic-navigation/plotting-course-through-space.mdx
@@ -2,7 +2,7 @@
 title: Tracer un parcours dans l'espace
 sidebar:
   label: Tracer un parcours dans l'espace
-slug: 2.0/frcosmic-navigation/plotting-course-through-space
+slug: fr/2.0/cosmic-navigation/plotting-course-through-space
 ---
 
 Un guide pour planifier votre voyage à travers les étoiles, avec des conseils et des meilleures pratiques.
