--- a/src/content/docs/fr/2.0/index.mdx
+++ b/src/content/docs/fr/2.0/index.mdx
@@ -10,7 +10,7 @@ hero:
     aider à maîtriser l'art de l'exploration spatiale.
   actions:
     - text: Commencer
-      link: /2.0/fr/getting-started/introduction-to-space-exploration/
+      link: /fr/2.0/getting-started/introduction-to-space-exploration/
       icon: right-arrow
     - text: Lire la documentation Starlight
       link: https://starlight.astro.build
